[gd_scene load_steps=4 format=3 uid="uid://c5rstnfoa1yfx"]

[ext_resource type="Script" uid="uid://bvanny70ylcj8" path="res://Scripts/Enemy/Enemy B/blueEnemyB.gd" id="1_4qyvd"]
[ext_resource type="Texture2D" uid="uid://brmmffa8nlkr6" path="res://Assets/Sprites/kenney_space-shooter-redux/PNG/UFOs/ufoBlue.png" id="2_rvkpa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7b25w"]
radius = 43.7379

[node name="BlueEnemyB" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 16
collision_mask = 2
motion_mode = 1
script = ExtResource("1_4qyvd")

[node name="BlueSprite" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
texture = ExtResource("2_rvkpa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7b25w")

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource("CircleShape2D_7b25w")

[node name="SpawnPos" type="Marker2D" parent="."]

[node name="FireSpeed" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, -11)
scale = Vector2(8, 6.57499)
rect = Rect2(-10, -10, 20, 21.85)

[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
[connection signal="timeout" from="FireSpeed" to="." method="_on_fire_speed_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
